--- a/sass/blocks/fixed.scss
+++ b/sass/blocks/fixed.scss
@@ -76,7 +76,7 @@
 
 .fixed__map {
   display: none;
-  background-image: url("/img/map.png");
+  background-image: url("../../img/map.png");
 }
 
 .fixed__btn {
