--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/header.scss";
 @import "blocks/fixed.scss";
 @import "blocks/advantages.scss";
+@import "blocks/projects.scss";
+@import "blocks/details.scss";
