--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,6 @@
 @import "blocks/advantages.scss";
 @import "blocks/projects.scss";
 @import "blocks/details.scss";
+@import "blocks/list-of-works.scss";
+@import "blocks/calculator.scss";
+@import "blocks/calc.scss";
