--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,3 +14,7 @@
 @import "blocks/list-of-works.scss";
 @import "blocks/calculator.scss";
 @import "blocks/calc.scss";
+@import "blocks/contacts.scss";
+@import "blocks/menu.scss";
+@import "blocks/scroll-down.scss";
+@import "blocks/main-menu.scss";
